tests/negative/test_data_not_def_init.orb
data Foo;

fnc main() () {
    let f:Foo;
};